--- a/css/style.css
+++ b/css/style.css
@@ -149,15 +149,15 @@ img {
 }
 .about-box .txt-box .abo-txt {
   width: 80.1%;
-  margin-top: 17%;
+  margin-top: 16%;
   animate-duration: 2s;
   animate-delay: 5s;
 }
 .about-box .txt-box .abo1-txt {
   width: 69.8%;
   margin-left: -11.15%;
-  margin-top: 12%;
-  padding-bottom: 80px;
+  margin-top: 9%;
+  padding-bottom: 50px;
 }
 .about-box .back-box {
   width: 100%;
@@ -469,7 +469,7 @@ img {
   margin-top: 64%;
   box-sizing: border-box;
   overflow: hidden;
-  min-height: 340px;
+  min-height: 300px;
   text-align: center;
 }
 .page-two .txt-box .two-g {
@@ -581,7 +581,7 @@ img {
   position: relative;
   margin-top: 64%;
   box-sizing: border-box;
-  min-height: 340px;
+  min-height: 300px;
   text-align: center;
   overflow: hidden;
 }
@@ -668,7 +668,7 @@ img {
   position: relative;
   margin-top: 64%;
   box-sizing: border-box;
-  min-height: 340px;
+  min-height: 300px;
   text-align: center;
   z-index: 22;
   overflow: hidden;
@@ -771,7 +771,7 @@ img {
   position: relative;
   margin-top: 64%;
   box-sizing: border-box;
-  min-height: 340px;
+  min-height: 300px;
   text-align: center;
   z-index: 22;
   overflow: hidden;
@@ -854,7 +854,7 @@ img {
   position: relative;
   margin-top: 62%;
   box-sizing: border-box;
-  min-height: 340px;
+  min-height: 300px;
   text-align: center;
   z-index: 22;
   overflow: hidden;
@@ -949,7 +949,7 @@ img {
   position: relative;
   margin-top: 64%;
   box-sizing: border-box;
-  min-height: 340px;
+  min-height: 300px;
   text-align: center;
   z-index: 22;
   overflow: hidden;
@@ -1040,7 +1040,7 @@ img {
   position: relative;
   margin-top: 63%;
   box-sizing: border-box;
-  min-height: 340px;
+  min-height: 300px;
   text-align: center;
   z-index: 22;
   overflow: hidden;
@@ -1060,79 +1060,13 @@ img {
   background-repeat: no-repeat;
   overflow: hidden;
 }
-.join-boxaa .box-insider {
-  width: 100%;
-  height: 100%;
-  background-image: url('../images/joinbg.png');
-  text-align: center;
-  position: relative;
-  background-size: 96%;
-  background-repeat: no-repeat;
-  background-position: center 20%;
-}
-.join-boxaa .box-insider .pic_a {
-  width: 30.6%;
-  margin: auto;
-  position: absolute;
-  top: 32.2%;
-  left: 50%;
-  margin-left: -15.3%;
-}
-.join-boxaa .box-insider .pic_a img {
-  width: 100%;
-}
-.join-boxaa .box-insider .pic_b {
-  width: 8.2%;
-  position: absolute;
-  top: 38.2%;
-  left: 50%;
-  margin-left: -4.1%;
-}
-.join-boxaa .box-insider .pic_c {
-  width: 78.5%;
-  position: absolute;
-  left: 50%;
-  margin-left: -39.2%;
-  top: 31%;
-  -webkit-animation: opacitypic 1s infinite;
-  animation: opacitypic 1s infinite;
-}
-.join-boxaa .box-insider .pic_d {
-  display: block;
-  width: 60.9%;
-  z-index: 24;
-  position: absolute;
-  left: 50%;
-  margin-left: -30.4%;
-  top: 46%;
-}
-.join-boxaa .box-insider .pic_d img {
-  width: 100%;
-}
-.join-boxaa .box-insider .pic_e {
-  width: 38.1%;
-  position: absolute;
-  left: 50%;
-  margin-left: -19%;
-  top: 54%;
-}
-.join-boxaa .backbox {
-  display: inline-block;
-  text-align: center;
-  position: absolute;
-  bottom: 5%;
-  width: 100%;
-}
-.join-boxaa .backbox img {
-  width: 35.7%;
-}
 .page-night {
-  width: 92%;
+  width: 94%;
   height: 90%;
   background: url('../images/joinbg.png');
   background-repeat: no-repeat;
   background-size: 100%;
-  background-position: center 30px;
+  background-position: center 16px;
   position: relative;
   overflow: hidden;
   margin: auto;
@@ -1165,7 +1099,7 @@ img {
   position: absolute;
   left: 50%;
   margin-left: -30.4%;
-  top: 50%;
+  top: 52%;
 }
 .page-night .pic_e {
   width: 38.1%;
@@ -1201,6 +1135,36 @@ img {
   margin: 6% auto 10% auto;
   -webkit-animation: Zoompic 1s infinite;
   animation: Zoompic 1s infinite;
+}
+.delay6 {
+  animation-delay: 0.6s;
+  -webkit-animation-delay: 0.6s;
+  /* Safari 和 Chrome */
+}
+.delay9 {
+  animation-delay: 0.9s;
+  -webkit-animation-delay: 0.9s;
+  /* Safari 和 Chrome */
+}
+.delay12 {
+  animation-delay: 1.2s;
+  -webkit-animation-delay: 1.2s;
+  /* Safari 和 Chrome */
+}
+.delay15 {
+  animation-delay: 1.5s;
+  -webkit-animation-delay: 1.5s;
+  /* Safari 和 Chrome */
+}
+.delay18 {
+  animation-delay: 1.8s;
+  -webkit-animation-delay: 1.8s;
+  /* Safari 和 Chrome */
+}
+.delay21 {
+  animation-delay: 2.1s;
+  -webkit-animation-delay: 2.1s;
+  /* Safari 和 Chrome */
 }
 .mouse-box {
   width: 7.6%;
