--- a/css/style.less
+++ b/css/style.less
@@ -163,15 +163,15 @@ img {
         margin-bottom: 5%;
         .abo-txt {
             width: 80.1%;
-            margin-top: 17%;
+            margin-top: 16%;
             animate-duration: 2s; //动画持续时间
             animate-delay: 5s; //动画延迟时间
         }
         .abo1-txt {
             width: 69.8%;
             margin-left: -11.15%;
-            margin-top: 12%;
-            padding-bottom: 80px
+            margin-top: 9%;
+            padding-bottom: 50px
         }
     }
     .back-box {
@@ -510,7 +510,7 @@ img {
         margin-top: 64%;
         box-sizing: border-box;
         overflow: hidden;
-        min-height: 340px;
+        min-height: 300px;
         text-align: center;
         .two-g {
             width: 65.86%;
@@ -624,7 +624,7 @@ img {
         position: relative;
         margin-top: 64%;
         box-sizing: border-box;
-        min-height: 340px;
+        min-height: 300px;
         text-align: center;
         overflow: hidden;
         .three-i {
@@ -712,7 +712,7 @@ img {
         position: relative;
         margin-top: 64%;
         box-sizing: border-box;
-        min-height: 340px;
+        min-height: 300px;
         text-align: center;
         z-index: 22;
         overflow: hidden;
@@ -817,7 +817,7 @@ img {
         position: relative;
         margin-top: 64%;
         box-sizing: border-box;
-        min-height: 340px;
+        min-height: 300px;
         text-align: center;
         z-index: 22;
         overflow: hidden;
@@ -901,7 +901,7 @@ img {
         position: relative;
         margin-top: 62%;
         box-sizing: border-box;
-        min-height: 340px;
+        min-height: 300px;
         text-align: center;
         z-index: 22;
         overflow: hidden;
@@ -997,7 +997,7 @@ img {
         position: relative;
         margin-top: 64%;
         box-sizing: border-box;
-        min-height: 340px;
+        min-height: 300px;
         text-align: center;
         z-index: 22;
         overflow: hidden;
@@ -1091,7 +1091,7 @@ img {
         position: relative;
         margin-top: 63%;
         box-sizing: border-box;
-        min-height: 340px;
+        min-height: 300px;
         text-align: center;
         z-index: 22;
         overflow: hidden;
@@ -1113,83 +1113,17 @@ img {
     background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
-    .box-insider {
-        width: 100%;
-        height: 100%;
-        background-image: url('../images/joinbg.png');
-        text-align: center;
-        position: relative;
-        background-size: 96%;
-        background-repeat: no-repeat;
-        background-position: center 20%;
-        .pic_a {
-            width: 30.6%;
-            margin: auto;
-            position: absolute;
-            top: 32.2%;
-            left: 50%;
-            margin-left: -15.3%;
-            img {
-                width: 100%;
-            }
-        }
-        .pic_b {
-            width: 8.2%;
-            position: absolute;
-            top: 38.2%;
-            left: 50%;
-            margin-left: -4.1%;
-        }
-        .pic_c {
-            width: 78.5%;
-            position: absolute;
-            left: 50%;
-            margin-left: -39.2%;
-            top: 31%;
-            -webkit-animation: opacitypic 1s infinite;
-            animation: opacitypic 1s infinite;
-        }
-        .pic_d {
-            display: block;
-            width: 60.9%;
-            z-index: 24;
-            position: absolute;
-            left: 50%;
-            margin-left: -30.4%;
-
-            top: 46%;
-            img {
-                width: 100%;
-            }
-        }
-        .pic_e {
-            width: 38.1%;
-            position: absolute;
-            left: 50%;
-            margin-left: -19%;
-            top: 54%;
-        }
-    }
-    .backbox {
-        display: inline-block;
-        text-align: center;
-        position: absolute;
-        bottom: 5%;
-        width: 100%;
-        img {
-            width: 35.7%;
-        }
-    }
+    
 }
 
 
 .page-night {
-    width: 92%;
+    width: 94%;
     height: 90%;
     background: url('../images/joinbg.png');
     background-repeat: no-repeat;
     background-size: 100%;
-    background-position: center 30px;
+    background-position: center 16px;
     position: relative;
 
     overflow: hidden;
@@ -1222,7 +1156,7 @@ img {
         position: absolute;
         left: 50%;
         margin-left: -30.4%;
-        top: 50%;
+        top: 52%;
     }
     .pic_e {
         width: 38.1%;
@@ -1263,6 +1197,34 @@ img {
     animation: Zoompic 1s infinite;
 }
 
+
+.delay6{
+    animation-delay:0.6s;
+    -webkit-animation-delay:0.6s; /* Safari 和 Chrome */
+}
+.delay9{
+    animation-delay:0.9s;
+    -webkit-animation-delay:0.9s; /* Safari 和 Chrome */
+}
+.delay12{
+    animation-delay:1.2s;
+    -webkit-animation-delay:1.2s; /* Safari 和 Chrome */
+}
+
+.delay15{
+    animation-delay:1.5s;
+    -webkit-animation-delay:1.5s; /* Safari 和 Chrome */
+}
+
+.delay18{
+    animation-delay:1.8s;
+    -webkit-animation-delay:1.8s; /* Safari 和 Chrome */
+}
+
+.delay21{
+    animation-delay:2.1s;
+    -webkit-animation-delay:2.1s; /* Safari 和 Chrome */
+}
 .mouse-box {
     width: 7.6%;
     position: absolute; // top: 35%;
